added list filter

--- a/Lockit.Web/Components/LockerDisplayTable.razor
+++ b/Lockit.Web/Components/LockerDisplayTable.razor
@@ -6,7 +6,7 @@
 	<tbody>
 	@foreach (var item in Items)
 	{
-		<tr>@RowTemplate(item)</tr>
+		<tr class="locker-list-row">@RowTemplate(item)</tr>
 	}
 	</tbody>
 </table>
