--- a/Lockit.Web/Components/App.razor
+++ b/Lockit.Web/Components/App.razor
@@ -5,11 +5,11 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<base href="/" />
-	<link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
 	<link rel="stylesheet" href="@Assets["app.css"]" />
 	<link rel="stylesheet" href="@Assets["Lockit.Web.styles.css"]" />
-	<link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+	<link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
+	
 	<ImportMap />
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<HeadOutlet @rendermode="InteractiveServer" />
@@ -18,6 +18,7 @@
 <body>
 	<Routes @rendermode="InteractiveServer" />
 	<script src="_framework/blazor.web.js"></script>
+	<script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
 </body>
 
 </html>
