--- a/Lockit.Web/Components/Layout/MainLayout.razor
+++ b/Lockit.Web/Components/Layout/MainLayout.razor
@@ -1,23 +1,47 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-	<div class="sidebar">
-		<NavMenu />
-	</div>
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
 
-	<main>
-		<div class="top-row px-4">
-			<a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-		</div>
+@* Needed for dialogs *@
+<MudDialogProvider />
 
-		<article class="content px-4">
-			@Body
-		</article>
-	</main>
-</div>
+@* Needed for snackbars *@
+<MudSnackbarProvider />
 
-<div id="blazor-error-ui" data-nosnippet>
-	An unhandled error has occurred.
-	<a href="." class="reload">Reload</a>
-	<span class="dismiss">🗙</span>
-</div>
+<MudLayout>
+	<MudAppBar Elevation="2">
+		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle" />
+		<MudText Typo="Typo.h6">Lockit</MudText>
+		<MudSpacer />
+		<MudMenu Variant="Variant.Text" Size="Size.Medium" Color="Color.Inherit" Icon="@Icons.Material.TwoTone.MoreVert" AnchorOrigin="Origin.BottomCenter">
+			<MudMenu StartIcon="@Icons.Material.Filled.Language" IconColor="Color.Primary" Label="Language" >
+				<MudMenuItem IconColor="Color.Secondary"><Blazicon Svg="FlagIcon4x3.Gb"/>  English</MudMenuItem>
+				<MudMenuItem IconColor="Color.Secondary"><Blazicon Svg="FlagIcon4x3.Nl"/>  Nederlands</MudMenuItem>
+				<MudMenuItem IconColor="Color.Secondary"><Blazicon Svg="FlagIcon4x3.Fr"/>  French</MudMenuItem>
+			</MudMenu>
+			<MudMenuItem Icon="@Icons.Material.TwoTone.DarkMode" IconColor="Color.Secondary" Label="Dark Theme"/>
+		</MudMenu>
+	</MudAppBar>
+	<MudDrawer @bind-Open="@_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="15" >
+@* 		<MudDrawerHeader>
+			<MudText Typo="Typo.h6">Lockit <MudIcon Icon="@Icons.Custom.Uncategorized.ColorPalette" /></MudText>
+		</MudDrawerHeader> *@
+		<MudDrawerContainer>
+			<NavMenu/>
+		</MudDrawerContainer>
+	</MudDrawer>
+	<MudMainContent>
+		@Body
+	</MudMainContent>
+</MudLayout>
+
+@code{
+	private bool _drawerOpen = false;
+
+	private void DrawerToggle()
+	{
+		_drawerOpen = !_drawerOpen;
+	}
+}
