--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
 	<MudNavLink Href="counter" Icon="@Icons.Material.Filled.Map">
 		Map
 	</MudNavLink>
-	<MudNavLink Href="counter" Icon="@Icons.Material.Filled.PlaylistAddCircle">
-		Registration form
+	<MudNavLink Href="register" Icon="@Icons.Material.Filled.PlaylistAddCircle">
+		Register
 	</MudNavLink>
 </MudNavMenu>
