added locker list fixes

--- a/Lockit.Web/Components/Layout/MainLayout.razor
+++ b/Lockit.Web/Components/Layout/MainLayout.razor
@@ -33,7 +33,9 @@
 		</MudDrawerContainer>
 	</MudDrawer>
 	<MudMainContent>
-		@Body
+		<MudPaper Class="pa-2 ma-5" Elevation="3">
+			@Body
+		</MudPaper>
 	</MudMainContent>
 </MudLayout>
 
