--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -11,4 +11,7 @@
 	<MudNavLink Href="register" Icon="@Icons.Material.Filled.PlaylistAddCircle">
 		Register
 	</MudNavLink>
+	<MudNavLink Href="setup" Icon="@Icons.Material.Filled.AddBox">
+		Setup
+	</MudNavLink>
 </MudNavMenu>
