--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -2,16 +2,16 @@
 	<MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">
 		Home
 	</MudNavLink>
-	<MudNavLink Href="lockers" Icon="@Icons.Material.Filled.Storage">
-		Lockers
+	<MudNavLink Href="lists" Icon="@Icons.Material.TwoTone.AdminPanelSettings">
+		Overview
 	</MudNavLink>
-	<MudNavLink Href="counter" Icon="@Icons.Material.Filled.Map">
+	<MudNavLink Href="counter" Icon="@Icons.Material.TwoTone.Map">
 		Map
 	</MudNavLink>
-	<MudNavLink Href="register" Icon="@Icons.Material.Filled.PlaylistAddCircle">
+	<MudNavLink Href="register" Icon="@Icons.Material.TwoTone.PlaylistAddCircle">
 		Register
 	</MudNavLink>
-	<MudNavLink Href="setup" Icon="@Icons.Material.Filled.AddBox">
+	<MudNavLink Href="setup" Icon="@Icons.Material.TwoTone.AddBox">
 		Setup
 	</MudNavLink>
 </MudNavMenu>
