added a bit of fluff to the home screen

--- a/Lockit.Web/Components/Pages/Home.razor
+++ b/Lockit.Web/Components/Pages/Home.razor
@@ -2,4 +2,15 @@
 
 <PageTitle>Home</PageTitle>
 
-Welcome to Lockit.
+<MudCard >
+	<MudCardMedia Image="images/lockitbanner.png" Height="200"/>
+	<MudCardContent>
+		<MudText Typo="Typo.h4" Align="Align.Left">Dashboard</MudText>
+		<MudText Typo="Typo.subtitle1" Align="Align.Center">Work in progress, open for feedback!.</MudText>
+	</MudCardContent>
+	<MudCardActions>
+		<MudIconButton Style="text-align: right" Icon="@Icons.Material.Filled.Favorite" Color="Color.Default" />
+		<MudIconButton Style="text-align: right" Icon="@Icons.Material.Filled.Share" Color="Color.Default" />
+	</MudCardActions>
+</MudCard>
+
